test/conformance/kuttl/generate-validatingadmissionpolicy/clusterpolicy/standard/generate/cpol-all-match-resource/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: disallow-host-path-t9-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: disallow-host-path-t9
spec:
  policyName: disallow-host-path-t9
  validationActions:
  - Audit
  - Warn
